@@ -626,7 +626,7 @@ view.status.expand-folds=Press 1-9 to specify fold level
 view.status.insert-literal=Press key to insert literally
 view.status.auto-wrap=Search string not found; wrapping around
 view.status.search-not-found=Search string not found
-view.status.replace-all=Replaced {0} occurrence(s) in {1} file(s)
+view.status.replace-all=Replaced {0} occurrence(s) in {1} file(s) ({2} milliseconds)
 view.status.io=I/O: {0} operations in progress
 view.status.io-1=I/O: 1 operation in progress
 view.status.io.done=Input/output complete
